--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "16.1.0",
     "ogl": "^1.0.11",
     "postprocessing": "^6.38.1",
+    "qr-code-styling": "^1.9.2",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
