--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "critters": "^0.0.23",
     "framer-motion": "^12.23.26",
     "gsap": "^3.14.2",
+    "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.0",
     "ogl": "^1.0.11",
